--- a/inknotes/src/components/Navbar/Navbar.module.css
+++ b/inknotes/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,16 @@
 .header{
   width: 100%;
   height: 75px;
-  background-color: var(--main-purple);
+  /* background-color: var(--main-purple); */
+  background: rgb(0,212,255);
+  background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(67,56,202,1) 100%);
+  background: rgb(67,56,202);
+  background: linear-gradient(90deg, rgba(67,56,202,1) 0%, rgba(0,212,255,1) 100%);
+  background: rgb(67,56,202);
+  background: linear-gradient(90deg, rgba(67,56,202,1) 0%, rgba(28,182,213,1) 100%);
   position: fixed;
   z-index: 10;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .nav{
@@ -38,4 +45,6 @@
   text-decoration: none;
   color: #fafafa;
   font-size: 1.1em;
+  font-weight: 500;
+  letter-spacing: 0.025em;
 }
