--- a/inknotes/src/index.css
+++ b/inknotes/src/index.css
@@ -1,5 +1,6 @@
 :root{
-  --main-purple: rgb(127, 36, 145);
+  /* --main-purple: rgb(127, 36, 145); */
+  --main-purple: rgb(67, 56, 202);
   --sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
@@ -18,7 +19,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-color: #fafafa; */
 }
 
 code {
